export enum EnergyClass {
  A4 = 0,
  A3 = 1,
  A2 = 2,
  A1 = 3,
  B = 4,
  C = 5,
  D = 6,
  E = 7,
  F = 8,
  G = 9,
}

export const ENERGY_LABELS: Record<number, string> = {
  0: 'A4',
  1: 'A3',
  2: 'A2',
  3: 'A1',
  4: 'B',
  5: 'C',
  6: 'D',
  7: 'E',
  8: 'F',
  9: 'G',
};
