export type NotificationCategory =
  | 'NEW_PROPERTIES'
  | 'PROMOTIONAL'
  | 'OFFER'
  | 'VISIT';
