/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { Staffer } from '../models/staffer';
export interface Admin {
  admin?: any;
  email?: string;
  id?: number;
  staffers?: Array<Staffer>;
}
