/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { RealEstate } from '../models/real-estate';
export interface CadastralData {
  createdDate?: string;
  energyClass?: 'A4' | 'A3' | 'A2' | 'A1' | 'B' | 'C' | 'D' | 'E' | 'F' | 'G';
  floor?: number;
  id?: number;
  lastModifiedDate?: string;
  price?: number;
  realEstate?: RealEstate;
  rooms?: number;
  size?: number;
}
