/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { FloorRange } from '../models/floor-range';
import { PriceRange } from '../models/price-range';
import { RoomsRange } from '../models/rooms-range';
import { Search } from '../models/search';
import { SquareMetersRange } from '../models/square-meters-range';
export interface CadastralFilter {
  floorRange?: FloorRange;
  id?: number;
  priceRange?: PriceRange;
  roomsRange?: RoomsRange;
  search?: Search;
  squareMetersRange?: SquareMetersRange;
}
