/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { GeographicalPosition } from '../models/geographical-position';
import { Utility } from '../models/utility';
export interface Detail {
  createdDate?: string;
  geographicalPosition?: GeographicalPosition;
  id?: number;
  lastModifiedDate?: string;
  utility?: Utility;
}
