/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { Admin } from '../models/admin';
import { RealEstate } from '../models/real-estate';
export interface EstateAgent {
  admin?: Admin;
  email?: string;
  id?: number;
  realEstates?: Array<RealEstate>;
}
