/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { EstateAgent } from '../models/estate-agent';
import { Offer } from '../models/offer';
import { Proposal } from '../models/proposal';
import { RealEstate } from '../models/real-estate';
import { User } from '../models/user';
import { Visit } from '../models/visit';
export interface Negotiation {
  createdDate?: string;
  estateAgent?: EstateAgent;
  id?: number;
  lastModifiedDate?: string;
  offers?: Array<Offer>;
  proposals?: Array<Proposal>;
  realEstate?: RealEstate;
  user?: User;
  visits?: Array<Visit>;
}
