/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { NotificationCategory } from '../models/notification-category';
export interface Notification {
  createdDate?: string;
  id?: number;
  lastModifiedDate?: string;
  message?: string;
  notificationCategory?: NotificationCategory;
}
