/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { RealEstate } from '../models/real-estate';
import { User } from '../models/user';
export interface Proposal {
  createdDate?: string;
  id?: number;
  lastModifiedDate?: string;
  proposalCategory?: 'OFFER' | 'COUNTER_OFFER' | 'VISIT';
  proposalStatus?: 'PENDING' | 'ACCEPTED' | 'REJECTED';
  realEstate?: RealEstate;
  user?: User;
}
