/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { CadastralData } from '../models/cadastral-data';
import { Detail } from '../models/detail';
import { EstateAgent } from '../models/estate-agent';
import { Proposal } from '../models/proposal';
import { SearchRealEstate } from '../models/search-real-estate';
export interface RealEstate {
  cadastralData?: CadastralData;
  category?: 'SALE' | 'RENT';
  createdDate?: string;
  description?: string;
  detail?: Detail;
  estateAgent?: EstateAgent;
  id?: number;
  images?: Array<string>;
  lastModifiedDate?: string;
  proposals?: Array<Proposal>;
  proximityTags?: Array<'NEAR_SCHOOLS' | 'NEAR_PARKS' | 'NEAR_PUBLIC_TRANSPORT'>;
  searchRealEstates?: Array<SearchRealEstate>;
}
