/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { CadastralFilter } from '../models/cadastral-filter';
import { Detail } from '../models/detail';
import { SearchRealEstate } from '../models/search-real-estate';
import { User } from '../models/user';
export interface Search {
  cadastralFilter?: CadastralFilter;
  category?: 'SALE' | 'RENT';
  createdDate?: string;
  detail?: Detail;
  id?: number;
  lastModifiedDate?: string;
  page?: number;
  searchRealEstates?: Array<SearchRealEstate>;
  size?: number;
  user?: User;
}
