/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

export interface StafferDto {
  adminEmail: string;
  email: string;
  password: string;
  role: string;
}
