/* tslint:disable */
/* eslint-disable */
/* Code generated by ng-openapi-gen DO NOT EDIT. */

import { Detail } from '../models/detail';
export interface Utility {
  createdDate?: string;
  detail?: Detail;
  hasAirConditioning?: boolean;
  hasDoorman?: boolean;
  hasElevator?: boolean;
  id?: number;
  lastModifiedDate?: string;
  nearPark?: boolean;
  nearPublicTransport?: boolean;
  nearSchool?: boolean;
}
