@startuml Model
class User {
  # id
  - username
  # email
  # password
  # accountLocked
  # enabled
  # createdDate
  # lastModifiedDate
}

abstract Proposal {
  # id
  # category: ProposalCategory
  # status: ProposalStatus
  # createdDate
  # lastModifiedDate
}

abstract Staffer {
}

class Admin {
}

class CadastralData {
  - id
  - price
  - size
  - energyClass
  - rooms
  - floor
  - createdDate
  - lastModifiedDate
}

class Detail {
  - id
  - createdDate
  - lastModifiedDate
}

class EstateAgent {
}

class GeographicalPosition {
  - id
  - city
  - municipality
  - address
  - latitude
  - longitude
  - radius
  - createdDate
  - lastModifiedDate
}

class Notification {
  - id
  - message
  - createdDate
  - lastModifiedDate
}

class Negotiation {
  - id
  - createdDate
  - lastModifiedDate
}

'Un round contiene massimo una offer ed una counter offer
class NegotiationRound {
  -id

}

class Reservation {
  - id
  - createdDate
  - lastModifiedDate
}

enum NegotiationStatus {
  OPEN
  CLOSED
}

class NotificationCategory {
  - id
  - name
  - isActive
  - createdDate
  - lastModifiedDate
}

class Offer {
  - amount
}

class RealEstate {
  - id
  - category: RealEstateCategory
  - images
  - description
  - createdDate
  - lastModifiedDate
}

class Search {
  - id
  - category: RealEstateCategory
  - size
  - page
  - createdDate
  - lastModifiedDate
}

class Utility {
  - id
  - hasAirConditioning
  - hasElevator
  - hasDoorman
  - createdDate
  - lastModifiedDate
}

class Visit {
  - date
  - time
}

class SearchRealEstate {
  - realEstateId
  - searchId
  - createdDate
  - lastModifiedDate
}

class CadastralFilter {
  - id
  - priceRange: BigDecimalRange
  - squareMetersRange: IntegerRange
  - energyClassRange: IntegerRange
  - roomsRange: IntegerRange
  - floorRange: IntegerRange
  - createdDate
  - lastModifiedDate
}

enum RealEstateCategory {
  SALE
  RENT
}

enum EnergyClass {
  A4
	A3
	A2
  A1
	B
	C
	D
  E
	F
  G
}

enum NotificationCategoryType {
  NEW_PROPERTIES
	PROMOTIONAL
	VISIT
	OFFER
}

enum ProposalCategory {
  VISIT
  OFFER
}

'Ereditarietà Proposal'
Proposal <|-left- Visit
Proposal <|-left- Offer

'Ereditarietà user'
User <|-left- Staffer

'Ereditarietà Staffer'
Staffer <|-- EstateAgent
Staffer <|-- Admin

'Admin associations'
Admin "1" -- "0..*" Admin : elige
Admin "1" -- "0..*" EstateAgent : nominate

'Detail associations'
Detail <-- "1" GeographicalPosition
Detail <-- "1" Utility

'Real Estate association'
RealEstate <-down- "1" Detail
RealEstate " 1  " -right- "0..*" SearchRealEstate : selects
RealEstate "0..*" -left- "1" EstateAgent : publish
RealEstate -down- CadastralData
RealEstate "1" -left- "0..*" Negotiation: has

'User association'
User " 1  " -right- "1..*" NotificationCategory : owns
User "1" -- "0..*" Search : execute

'Estate Agent association'
EstateAgent "1" -right- "0..*" Negotiation

'Notification association'
Notification "0..*" -down- "1" NotificationCategory : individuate

'Negotiation association'
Negotiation "1" -up- "0..*" NegotiationRound
Negotiation "0..*" -down- "1" User: has

'Search assocation'
Search <-- "1" Detail
Search "  1 " -left- "0..*" SearchRealEstate : selects
Search -down- CadastralFilter

@enduml